--- a/about-us.html
+++ b/about-us.html
@@ -18,56 +18,43 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.btn-md{
-padding: 15.4px 30.5px;
-border-radius: 0;
-}
-.xd034e64f5e4df09218206647282864f4{
-border: 1px solid #73909e41;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f1efeb;
-}
-.w77eedd22bf6a97d110d7a00218479628 p,.w77eedd22bf6a97d110d7a00218479628 a,.w77eedd22bf6a97d110d7a00218479628 span,.w77eedd22bf6a97d110d7a00218479628 label{
+.y2f456517468365b6454d69ec7867a1a3 p,.y2f456517468365b6454d69ec7867a1a3 a,.y2f456517468365b6454d69ec7867a1a3 span,.y2f456517468365b6454d69ec7867a1a3 label{
 font-size:16px!important;
 }
-.navbar a{
-font-size: 17.7px!important;
-font-weight: bold;
+footer{
+background:#0f0f0f;
+color:#ffffff;
 }
-.nav-item{
-padding-left:8.5px;
-padding-right:8.5px;
-padding-top:5.3px;
-padding-bottom:4.6px;
+.c0a12996c41dced5182e74e9d5a82ab3b:hover{
+box-shadow: 0 49.8px 50.4px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
-footer *{
-font-size:16px !important;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.b7204fdd929a6128afd9c23881e53de34 a{
+.x97c7365e874641b7b4455704a40c12ac a{
 font-size:16px;
 }
-.w77eedd22bf6a97d110d7a00218479628 a,.b7204fdd929a6128afd9c23881e53de34 a{
-color:#070707!important;
+.btn-md{
+padding: 15px 30.5px;
+border-radius: 0;
+}
+ul{
+list-style: circle;
+}
+.y2f456517468365b6454d69ec7867a1a3 a,.x97c7365e874641b7b4455704a40c12ac a{
+color:#010101!important;
 text-decoration: underline !important;
 }
-.nav-link{
-color: #000000!important;
-
+.f5dc1925a4d818ce0f43eafb0cfae40ca{
+border: 1px solid #63808e31;
+border-radius: 5px;
+padding: 20px 20px;
+background: #eceae6;
+}
+.navbar a{
+font-size: 17.5px!important;
+font-weight: bold;
 }
 a{
 text-decoration: none!important;
-}
-.ybdcc078d9d0d5bec3757557191b183e0:hover{
-box-shadow: 0 50.4px 49.8px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-footer{
-background:#030303;
-color:#ffffff;
 }
 footer a{
 color:#ffffff;
@@ -76,16 +63,29 @@ text-decoration: underline;
 html{
 scroll-behavior: smooth;
 }
-.b7204fdd929a6128afd9c23881e53de34 p,.b7204fdd929a6128afd9c23881e53de34 span,.b7204fdd929a6128afd9c23881e53de34 label{
+footer *{
+font-size:16px !important;
+}
+.nav-item{
+padding-left:7.7px;
+padding-right:8.5px;
+padding-top:4.9px;
+padding-bottom:5.1px;
+}
+.x97c7365e874641b7b4455704a40c12ac p,.x97c7365e874641b7b4455704a40c12ac span,.x97c7365e874641b7b4455704a40c12ac label{
 font-size:16px!important;
 }
-ul{
-list-style: circle;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
-.a578da582dbd158bd0b54618245952c3e{
+.e4043c87d908a9bc4359aa4c5b174224a{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
+}
+.nav-link{
+color: #000000!important;
+
 }
 </style>
 </head>
@@ -94,10 +94,10 @@ color:#000000!important;
 <nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="https://clear-smiles.netlify.app/dentist-in-weston-fl.html"  ><img alt="img/clear-smiles-dental-logo.png" src="img/clear-smiles-dental-logo.png"  width="150px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
 <ul class="d-flex align-items-center ml-auto navbar-nav"><li class=" nav-item">
-<a class="nav-link d9d85cbd8436203f445ccca64863e22ba" href="https://clear-smiles.netlify.app/dentist-in-weston-fl.html"  >Dentist in Weston, FL</a>
-</li><li class="nav-item"><a class="nav-link d9d85cbd8436203f445ccca64863e22ba" rel=nofollow href="https://clear-smiles.netlify.app/about-us.html">About Us</a>
+<a class="nav-link e44b7b7ea2253c7848fd946a35f841db8" href="https://clear-smiles.netlify.app/dentist-in-weston-fl.html"  >Dentist in Weston, FL</a>
+</li><li class="nav-item"><a class="e44b7b7ea2253c7848fd946a35f841db8 nav-link" rel=nofollow href="https://clear-smiles.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -110,7 +110,7 @@ color:#000000!important;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 xd034e64f5e4df09218206647282864f4">
+<div class="col-md-12 mb-3 f5dc1925a4d818ce0f43eafb0cfae40ca">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>Clear Smiles Dental</h4></a>
@@ -135,7 +135,7 @@ color:#000000!important;
 </div>
 </div>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="container py-4 pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>Clear Smiles Dental</p>
 <p>Phone : +17547049048</p>
@@ -143,17 +143,17 @@ color:#000000!important;
 <p>State : Florida</p>
 <p>Zip : 33326</p>
 <p>Address : 1900 Weston Rd</p>
-<p><a class="d9d85cbd8436203f445ccca64863e22ba" href="https://www.google.com/maps?cid=7616489489527414810" rel="nofollow"> Google Business Profile</a></p>
-</div><div class="col-lg-3"><p><a class="d9d85cbd8436203f445ccca64863e22ba" href="https://clear-smiles.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="d9d85cbd8436203f445ccca64863e22ba" href="https://clear-smiles.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="d9d85cbd8436203f445ccca64863e22ba" href="https://clear-smiles.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p><a class="e44b7b7ea2253c7848fd946a35f841db8" href="https://www.google.com/maps?cid=7616489489527414810" rel="nofollow"> Google Business Profile</a></p>
+</div><div class="col-lg-3"><p><a class="e44b7b7ea2253c7848fd946a35f841db8" href="https://clear-smiles.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="e44b7b7ea2253c7848fd946a35f841db8" href="https://clear-smiles.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="e44b7b7ea2253c7848fd946a35f841db8" href="https://clear-smiles.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/ClearSmilesDental" class="facebook yb9d79bfd10895ab471a962499d4385a9" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.instagram.com/clearsmilesdental" class="google yb9d79bfd10895ab471a962499d4385a9-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/ClearSmiles" class="twitter yb9d79bfd10895ab471a962499d4385a9" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/ClearSmilesDental" class="facebook w137c64d0f8efe47e1c8603cdf1086f68" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.instagram.com/clearsmilesdental" class="w137c64d0f8efe47e1c8603cdf1086f68 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/ClearSmiles" class="twitter w137c64d0f8efe47e1c8603cdf1086f68" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
