--- a/sitemap.html
+++ b/sitemap.html
@@ -18,79 +18,79 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-a{
-text-decoration: none!important;
-}
-footer{
-background:#0f0f0f;
-color:#ffffff;
-}
-.nav-item{
-padding-left:7.9px;
-padding-right:7.5px;
-padding-top:5.2px;
-padding-bottom:4.5px;
-}
-.uf6e90fb73722a430f2427799ed71b6ba p,.uf6e90fb73722a430f2427799ed71b6ba a,.uf6e90fb73722a430f2427799ed71b6ba span,.uf6e90fb73722a430f2427799ed71b6ba label{
-font-size:16px!important;
+.nav-link{
+color: #000000!important;
+
 }
 html{
 scroll-behavior: smooth;
 }
-footer *{
-font-size:16px !important;
+.zc65a6c141010bfb6841e9be2ec254323{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
-.a3ca7e68ebad1b98bc550f20410ebbfbf:hover{
-box-shadow: 0 50px 50.1px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.a3eff543ed40056ce57a20b9c6e682fba a{
+font-size:16px;
+}
+.befb678f1ddd421a8ce3716815036d1c6 a,.a3eff543ed40056ce57a20b9c6e682fba a{
+color:#0e0e0e!important;
+text-decoration: underline !important;
 }
 ul{
 list-style: circle;
+}
+footer *{
+font-size:16px !important;
+}
+a{
+text-decoration: none!important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.v12f91c528c9d3de4c3fa1fe50ffdd2fc a{
-font-size:16px;
+.nav-item{
+padding-left:7.7px;
+padding-right:7.5px;
+padding-top:4.9px;
+padding-bottom:5.2px;
+}
+.befb678f1ddd421a8ce3716815036d1c6 p,.befb678f1ddd421a8ce3716815036d1c6 a,.befb678f1ddd421a8ce3716815036d1c6 span,.befb678f1ddd421a8ce3716815036d1c6 label{
+font-size:16px!important;
 }
 .navbar a{
-font-size: 17.9px!important;
+font-size: 18.4px!important;
 font-weight: bold;
 }
 .btn-md{
-padding: 14.8px 30.1px;
+padding: 14.9px 30.3px;
 border-radius: 0;
 }
 *{
 font-family: 'Kumbh Sans', sans-serif;
 }
-.vb782278a20bcbf14bfdb5d6e6d30da3d{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+footer{
+background:#0e0e0e;
+color:#ffffff;
 }
-.nav-link{
-color: #000000!important;
-
-}
-.uf6e90fb73722a430f2427799ed71b6ba a,.v12f91c528c9d3de4c3fa1fe50ffdd2fc a{
-color:#050505!important;
-text-decoration: underline !important;
-}
-.v12f91c528c9d3de4c3fa1fe50ffdd2fc p,.v12f91c528c9d3de4c3fa1fe50ffdd2fc span,.v12f91c528c9d3de4c3fa1fe50ffdd2fc label{
+.a3eff543ed40056ce57a20b9c6e682fba p,.a3eff543ed40056ce57a20b9c6e682fba span,.a3eff543ed40056ce57a20b9c6e682fba label{
 font-size:16px!important;
+}
+.eb0dcd02979362dc152d571dbe06a524c:hover{
+box-shadow: 0 49.5px 50.4px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 </style>
 </head>
 <body>
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="https://clear-smiles.netlify.app/dentist-in-weston-fl.html"  ><img alt="img/clear-smiles-dental-logo.png" src="img/clear-smiles-dental-logo.png"  width="150px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="ml-auto align-items-center d-flex navbar-nav"><li class="nav-item ">
-<a class="nav-link a3e26e2c6095f3f57257f3635ac1d1a3e" href="https://clear-smiles.netlify.app/dentist-in-weston-fl.html"  >Dentist in Weston, FL</a>
-</li><li class="nav-item"><a class="a3e26e2c6095f3f57257f3635ac1d1a3e nav-link" rel=nofollow href="https://clear-smiles.netlify.app/about-us.html">About Us</a>
+<ul class="align-items-center navbar-nav ml-auto d-flex"><li class=" nav-item">
+<a class="b57523b450a0b9ba554ac5acc161dd121 nav-link" href="https://clear-smiles.netlify.app/dentist-in-weston-fl.html"  >Dentist in Weston, FL</a>
+</li><li class="nav-item"><a class="nav-link b57523b450a0b9ba554ac5acc161dd121" rel=nofollow href="https://clear-smiles.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -120,17 +120,17 @@ font-size:16px!important;
 <p>State : Florida</p>
 <p>Zip : 33326</p>
 <p>Address : 1900 Weston Rd</p>
-<p><a class="a3e26e2c6095f3f57257f3635ac1d1a3e" href="https://www.google.com/maps?cid=7616489489527414810" rel="nofollow"> Google Business Profile</a></p>
-</div><div class="col-lg-3"><p><a class="a3e26e2c6095f3f57257f3635ac1d1a3e" href="https://clear-smiles.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="a3e26e2c6095f3f57257f3635ac1d1a3e" href="https://clear-smiles.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="a3e26e2c6095f3f57257f3635ac1d1a3e" href="https://clear-smiles.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p><a class="b57523b450a0b9ba554ac5acc161dd121" href="https://www.google.com/maps?cid=7616489489527414810" rel="nofollow"> Google Business Profile</a></p>
+</div><div class="col-lg-3"><p><a class="b57523b450a0b9ba554ac5acc161dd121" href="https://clear-smiles.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="b57523b450a0b9ba554ac5acc161dd121" href="https://clear-smiles.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="b57523b450a0b9ba554ac5acc161dd121" href="https://clear-smiles.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/ClearSmilesDental" class="xcd7fb474a2acc568bb109f9e57b5c8cf facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.instagram.com/clearsmilesdental" class="google xcd7fb474a2acc568bb109f9e57b5c8cf-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/ClearSmiles" class="twitter xcd7fb474a2acc568bb109f9e57b5c8cf" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/ClearSmilesDental" class="facebook t273400fb5ea5b0718fac47753f063080" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.instagram.com/clearsmilesdental" class="google t273400fb5ea5b0718fac47753f063080-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/ClearSmiles" class="twitter t273400fb5ea5b0718fac47753f063080" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
